# synthetic-contrast-enhancement

./: .isort.cfg  .mypy.ini  .pre-commit-config.yaml  README.md  black.toml  environment.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: check_code_quality.yml  check_typing.yml  multi_phase_tests.yml  run_tests.yml
common-modules/: environment.yml  setup.py
common-modules/src/common/: __init__.py
common-modules/src/common/utils/: affine_transformation.py  augmentation.py  test_config.yml
common-modules/test_common/: conftest.py
common-modules/test_common/utils/: test_affine_transform.py  test_augmentation.py  test_metrics.py
multi-phase-sce/: environment.yml  pyproject.toml  requirements.txt  setup.py  test_requirements.txt  tox.ini
multi-phase-sce/src/multi_phase/cli/: training.py
multi-phase-sce/src/multi_phase/networks/components/: discriminator.py  generator.py
multi-phase-sce/src/multi_phase/networks/components/layer/: layers.py
multi-phase-sce/src/multi_phase/utils/: affine_transformation.py  augmentation.py  dataloader.py  losses.py  patch_utils.py  test_config.yml
multi-phase-sce/test_multi_phase/: conftest.py
multi-phase-sce/test_multi_phase/networks/components/: test_discriminator.py  test_generator.py
multi-phase-sce/test_multi_phase/networks/components/layer/: test_layers.py
multi-phase-sce/test_multi_phase/utils/: test_affine_transform.py  test_augmentation.py  test_losses.py
multi_phase/: setup.py
test_multi_phase/networks/components/: test_discriminator.py
