[build-system]
requires = [
  "setuptools>=42",
]
build-backend = "setuptools.build_meta"

[project]
name = "multi-phase-sce"
version = "0.1.0"
description = "Multi-phase synthetic contrast enhancement: comparison of U-Net, Pix2Pix and CycleGAN for generating two contrast phases from non-contrast-enhanced computed tomography images"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib>=3.4",
    "pyyaml==6.0",
    "simpleitk>=2.1",
    "tensorflow==2.3.0"
]

requires-python = ">=3.8,<3.11"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
train="multi_phase.cli.training:main"

[project.optional-dependencies]
quality = [
    "black",
    "flake8",
    "isort",
    "mypy"
]
test = ["pytest"]

[tool.mypy]
warn_unused_configs = true
namespace_packages = true
python_version = "3.8"
strict = true
warn_unreachable = true
hide_error_codes = false
pretty = true
show_traceback = true
install_types = true
scripts_are_modules = true

[tool.black]
color = true
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
include_trailing_comma = true
